fix class and remove test

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
   <body>
     <div class="page">
       <header class="header"></header>
-      <main class="main">
-        <p>Watch this space....</p>
+      <main class="content">
         <section class="recipes"></section>
         <section class="reservations"></section>
         <section class="menu"></section>
