link to future sections

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           />
           <div class="nav__links">
             <a href="#recipes" class="nav__link">Recipes</a>
-            <a href="#" class="nav__link">Menu</a>
-            <a href="#" class="nav__link">Book a table</a>
-            <a href="#" class="nav__link">Contacts</a>
+            <a href="#menu" class="nav__link">Menu</a>
+            <a href="#reservations" class="nav__link">Book a table</a>
+            <a href="#about" class="nav__link">Contacts</a>
           </div>
         </nav>
         <h1 class="header__title">
@@ -104,9 +104,9 @@
             </article>
           </div>
         </section>
-        <section class="reservations"></section>
-        <section class="menu"></section>
-        <section class="about"></section>
+        <section id="reservations" class="reservations"></section>
+        <section id="menu" class="menu"></section>
+        <section id="about" class="about"></section>
       </main>
       <footer class="footer"></footer>
     </div>
