add list to header

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             alt="Triple Espresso logo"
             class="nav__logo"
           />
-          <div class="nav__links">
-            <a href="#recipes" class="nav__link">Recipes</a>
-            <a href="#menu" class="nav__link">Menu</a>
-            <a href="#reservations" class="nav__link">Book a table</a>
-            <a href="#about" class="nav__link">Contacts</a>
-          </div>
+          <ul class="nav__links">
+            <li><a href="#recipes" class="nav__link">Recipes</a></li>
+            <li><a href="#menu" class="nav__link">Menu</a></li>
+            <li><a href="#reservations" class="nav__link">Book a table</a></li>
+            <li><a href="#about" class="nav__link">Contacts</a></li>
+          </ul>
         </nav>
         <h1 class="header__title">
           <span class="header__span-accent">Specialty coffee</span>
