singularize class name & redeploy stage 3

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <ul class="nav__links">
             <li><a href="#recipes" class="nav__link">Recipes</a></li>
             <li><a href="#menu" class="nav__link">Menu</a></li>
-            <li><a href="#reservations" class="nav__link">Book a table</a></li>
+            <li><a href="#reservation" class="nav__link">Book a table</a></li>
             <li><a href="#about" class="nav__link">Contacts</a></li>
           </ul>
         </nav>
@@ -104,9 +104,9 @@
             </article>
           </div>
         </section>
-        <section id="reservations" class="reservations">
-          <h2 class="reservations__title">Book a table</h2>
-          <form class="form reservations__form">
+        <section id="reservation" class="reservation">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="form reservation__form">
             <fieldset class="form__fieldset">
               <label for="name" class="form__label">Name *</label>
               <input
