fix layout & override style defaults

--- a/index.html
+++ b/index.html
@@ -58,11 +58,9 @@
               Saturday &ndash; Sunday (11:00 &ndash; 18:00)
             </p>
           </div>
-          <div class="header__column">
-            <p class="header__paragraph">
-              200 Success Avenue, The Town of Triple Peaks
-            </p>
-          </div>
+          <p class="header__paragraph">
+            200 Success Avenue, The Town of Triple Peaks
+          </p>
         </div>
       </header>
       <main class="content">
@@ -155,8 +153,8 @@
             We brew coffee from locally roasted, Fairtrade certified beans and
             use biodegradable cups. All teas from our collection are $2/cup.
           </p>
-          <div class="menu__cards">
-            <div class="card">
+          <ul class="menu__cards">
+            <li class="card">
               <h3 class="card__title">Filter</h3>
               <ul class="card__list-items">
                 <li class="card__list-item">
@@ -179,8 +177,8 @@
                   >$1.25
                 </li>
               </ul>
-            </div>
-            <div class="card">
+            </li>
+            <li class="card">
               <h3 class="card__title">Espresso</h3>
               <ul class="card__list-items">
                 <li class="card__list-item">
@@ -199,8 +197,8 @@
                   >$10
                 </li>
               </ul>
-            </div>
-            <div class="card">
+            </li>
+            <li class="card">
               <h3 class="card__title">Baked Goods</h3>
               <ul class="card__list-items">
                 <li class="card__list-item">
@@ -223,8 +221,8 @@
                   >$0.25
                 </li>
               </ul>
-            </div>
-          </div>
+            </li>
+          </ul>
         </section>
         <section id="about" class="about">
           <h2 class="about__title">About the coffee shop</h2>
